--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <li><a href="#">Safety & eco</a></li>
             <li><a href="#">Aboute our ads</a></li>
             <li><a href="#">&copy;  Microsoft 2021</a></li>
-            <li><a href="#">ساخته شده توسط سید جعفر موسوی یوهاها</a></li>
+            <li><a href="#">   ساخته شده توسط جعفر موسوی دوازدهم کامپیوتر </a></li>
         </ul>
      </div>
       </Footer>
